centered forgot password and fixed sign up spacing error

--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ form .txt_field {
   margin: -5px 0 20px 5px;
   color: #a6a6a6;
   cursor: pointer;
+  text-align: center;
 }
 
 .pass:hover {
@@ -115,10 +116,6 @@ input[type="submit"]:hover {
 .signup_link a {
   color: #2691d9;
   text-decoration: none;
-}
-
-.signup_link a:hover {
-  text-decoration: underline;
 }
 
 
